--- a/arch/x86/configs/android-x86_64_defconfig
+++ b/arch/x86/configs/android-x86_64_defconfig
@@ -7025,6 +7025,16 @@ CONFIG_HAVE_KVM=y
 CONFIG_BINARY_PRINTF=y
 
 #
+# KVM Virtualization
+#
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
+CONFIG_KVM_EXIT_TIMING=y
+CONFIG_KVM_E500=y
+CONFIG_E500=y
+CONFIG_KVM_MPIC=y
+
+#
 # Library routines
 #
 CONFIG_RAID6_PQ=m
