--- a/arch/x86/configs/android-x86_defconfig
+++ b/arch/x86/configs/android-x86_defconfig
@@ -7325,4 +7325,9 @@ CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_ARCH_HAS_MMIO_FLUSH=y
 CONFIG_SBITMAP=y
+#
+# Bliss stuff
+#
 CONFIG_INTEL_IPTS=m
+CONFIG_SECURITY_YAMA=y
+CONFIG_SECURITY_YAMA_STACKED=y
